1、升级Netty版本 2、调整Netty 合理释放资源 3、调整队列、高低水位线默认值